# pybcoin

./: .travis.yml  LICENSE  MANIFEST  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
data/: BitcoinPrice.csv  GTrendsData.csv  btc_price.csv  oil_price.csv
data/btc/: btc_price.csv  btc_prices.csv  btc_volume.csv  tweet_counts.csv
data/commodity/: gold_price.csv  nyse_index.csv  oil_price.csv  usd_exchrate.csv
data/gtrends/: GTrendsData.csv  google_trends_old.csv  gtrends.csv
data/latest/: btc_prices.csv  btc_volume.csv  gtrends.csv  output.json  reddit_comments.csv  reddit_comments_sentiment.csv  tweet_counts.csv  tweets.csv  tweets_sentiment.csv  twitter_sentiment.csv  usd_exchrate.csv
data/pred/: predicted_time.csv
data/reddit/: output_2018-04-01.csv  output_2018-04-02.csv  output_2018-04-03.csv  output_2018-04-04.csv  output_2018-04-05.csv  output_2018-04-06.csv  output_2018-04-07.csv  output_2018-04-08.csv  output_2018-04-09.csv  output_2018-04-10.csv  output_2018-04-11.csv  output_2018-04-12.csv  output_2018-04-13.csv  output_2018-04-14.csv  output_2018-04-15.csv  output_2018-04-16.csv  output_2018-04-17.csv  output_2018-04-18.csv  output_2018-04-19.csv  output_2018-04-20.csv  output_2018-04-21.csv  output_2018-04-22.csv  output_2018-04-23.csv  output_2018-04-24.csv  output_2018-04-25.csv  output_2018-04-26.csv  (+24 more)
doc/: FDD_Bitcoin_Predict_v1.doc  Makefile  TechReviews_v1.ppt  TechReviews_v2.ppt  conf.py  index.rst  make.bat
examples/: example.html
pybcoin/: BitcoinPrice.csv  GTrendsData.py  empty.py  home.py  starter.py
(+58 files in other folders)
