[metadata]
description-file = README.md
[nosetests]
with-coverage=1
cover-package=./pybcoin/DataCollector, ./pybcoin/SentimentAnalyzer, ./pybcoin/utils
cover-html=1
cover-erase=1
verbosity=2
cover-html-dir=./pybcoin/test/coverage
[flake8]
ignore=C901,
exclude =
    .git,
    pybcoin/home.py,
    pybcoin/__pycache__,
    doc/conf.py,
    pybcoin/test/__pycache__,
    pybcoin/test/coverage,
    pybcoin/utils/__pycache__,
    pybcoin/DataCollector/__pycache__,
    pybcoin/config/config_generator.py,
    pybcoin/utils/__init__.py,
    pybcoin/ModelForecast/


max-complexity = 10
